Bug 706389 - Inconsistent versioning (revision)
Summary: Inconsistent versioning (revision)
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: 10.0.0
Hardware: All All
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-02 19:03 UTC by Michael Osipov
Modified: 2023-03-21 12:56 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Osipov 2023-02-02 19:03:00 UTC
This is somewhat similar to Bug 415014.

I am currently working on the FreeBSD port of gs 10 and I don't understand this inconsistency:

website says: The current Ghostscript release 10.0.0
downloaded tarball says: ghostscript-10.0.0.tar.gz as well as the expanded directory
base/version.mak says: GS_VERSION_MINOR=00
throughout code '"%d.%02d.%d", major, minor, patch' is used
'gs --help | head -1' says: GPL Ghostscript 10.00.0 (2022-09-21)
'gs --version' says: 10.00.0
'gs | head -1' says: GPL Ghostscript 10.0.0 (2022-09-21)

Something does not add up here.

Can you please make it consistent throughout the base, at least in the printf() output from code?
Comment 1 Michael Osipov 2023-02-02 19:08:48 UTC
https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/tag/gs1000 says: 10.0.0, comment refers to next version as 10.01.0
Comment 2 Chris Liddell (chrisl) 2023-02-27 14:40:43 UTC
Basically, it's an oversight, or two...

I have a fix for the banner (the issue there was that it's printed in Postscript), and I'll be more careful in the release process.
Comment 3 Chris Liddell (chrisl) 2023-02-28 08:57:00 UTC
The version should be of the form "10.00.0", so the banner printed on startup is addressed here:

https://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=cc86ef9a4948

The release archives and Windows installers just need me to pay a bit closer attention to what I type when I do the release.
Comment 4 Michael Osipov 2023-02-28 09:01:09 UTC
(In reply to Chris Liddell (chrisl) from comment #3)
> The version should be of the form "10.00.0", so the banner printed on
> startup is addressed here:
> 
> https://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=cc86ef9a4948
> 
> The release archives and Windows installers just need me to pay a bit closer
> attention to what I type when I do the release.

Thanks, looking forward to a consistent 10.00.1
Comment 5 Michael Osipov 2023-03-21 12:56:22 UTC
I can confirm that this in GH, tarball and inline version stick together for 10.01.0rc2. Looking forward to the frontpage when 10.01.0 is releasd.