psi/iinit.c
@@ -1,4 +1,4 @@
-/* Copyright (C) 2001-2022 Artifex Software, Inc.
+/* Copyright (C) 2001-2023 Artifex Software, Inc.
    All Rights Reserved.
 
    This software is provided AS-IS with no warranty, either express or
@@ -405,7 +405,7 @@ zop_init(i_ctx_t *i_ctx_p)
     /* Initialize the predefined names other than operators. */
     /* Do this here in case op_init changed any of them. */
     {
-        ref vcr, vpr, vpf, vre, vrd;
+        ref vcr, vpr, vpf, vre, vrd, vres;
 
         make_const_string(&vcr, a_readonly | avm_foreign,
                           strlen(gs_copyright), (const byte *)gs_copyright);
@@ -414,13 +414,17 @@ zop_init(i_ctx_t *i_ctx_p)
         make_const_string(&vpf, a_readonly | avm_foreign,
                           strlen(gs_productfamily),
                           (const byte *)gs_productfamily);
+        make_const_string(&vres, a_readonly | avm_foreign,
+                          strlen(GS_STRINGIZE(GS_DOT_VERSION)),
+                          (const byte *)GS_STRINGIZE(GS_DOT_VERSION));
         make_int(&vre, gs_revision);
         make_int(&vrd, gs_revisiondate);
         if ((code = i_initial_enter_name(i_ctx_p, "copyright", &vcr)) < 0 ||
             (code = i_initial_enter_name(i_ctx_p, "product", &vpr)) < 0 ||
             (code = i_initial_enter_name(i_ctx_p, "productfamily", &vpf)) < 0 ||
             (code = i_initial_enter_name(i_ctx_p, "revision", &vre)) < 0 ||
-            (code = i_initial_enter_name(i_ctx_p, "revisiondate", &vrd)) < 0)
+            (code = i_initial_enter_name(i_ctx_p, "revisiondate", &vrd)) < 0 ||
+            (code = i_initial_enter_name(i_ctx_p, ".revisionstring", &vres)) < 0)
             return code;
     }
 
